dashboard interface edit
